# thread_sequencing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/sequence/: atomic.h  sequence.h  thread.h
source/: sequence.cpp
